changed the scss and css build using webpack replacing gulp; fixed the webpack dev server reload 404 error

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Mount Packaging Machinery Pvt. Ltd.</title>
-    <link rel="stylesheet" href="dist/app.css">
-    <link rel="stylesheet" href="css/vars.css">
+    <link rel="stylesheet" href="/dist/app.css">
+    <link rel="stylesheet" href="/css/vars.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="root">
 
     </div>
-    <script src="dist/main.js"></script>
+    <script src="/dist/main.js"></script>
 </body>
 </html>
